welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: type mismatch;
 found   : Int
 required: Boolean
	if (ado(a)==true && ado(b)==false){
                ^loneTeen:5: error: type mismatch;
 found   : Int
 required: Boolean
	if (ado(b)==true && ado(a)==false){
                ^loneTeen:14: error: type mismatch;
 found   : Int(13)
 required: Boolean
	if (c<13 && c>19){
              ^