welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
	if (ado(a)==true && ado(b)==false){
		return true;
	}
	if (ado(b)==true && ado(a)==false){
		return true;
	}else{
		return false;
	}
}


def  ado(c:Boolean){
	if (c<13 && c>19){
		return true;
	}else{
		if ( c==13){
			return true;
			if ( c==19){
				return true;
			}else{
				return false;
			}
		}
	}
}
